<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewStyleBordered"
        android:id="@+id/tvSelectBloodType"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/select_blood_group"
        app:drawableEndCompat="@drawable/down_arrow"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewStyleBordered"
        android:id="@+id/tvEnterCity"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/select_city"
        app:drawableEndCompat="@drawable/down_arrow"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonPrimary"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnAddDonor"
        android:text="@string/search_donor"
        android:layout_margin="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

</LinearLayout>