<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivDonorPicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:weightSum="2"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_rounded_gray">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:text="@string/name" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:text="Salman Siddique" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/blood_group" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvBloodGroup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:text="A-" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:weightSum="2"
            android:padding="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_rounded_gray">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:text="@string/area" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvCity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:text="FDA city, Faislabad" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/mobile_number" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:text="8344803984" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_rounded_gray">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:text="@string/date_of_birth" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvDob"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:text="13-09-2330" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratRegular"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                android:text="@string/age" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvAge"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:text="10" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCallNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Call Now"
            android:padding="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"/>

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:adSize="BANNER"
        app:adUnitId="@string/add_banner_id" />
</androidx.constraintlayout.widget.ConstraintLayout>