<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/ivDonorPicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription"
        android:src="@mipmap/ic_launcher_round"/>


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/FontMontserratSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIndex"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="1." />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_gray">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratRegular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            android:text="@string/name" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratSemiBold"
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            tools:text="Salman Siddique" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratRegular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/blood_group" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratSemiBold"
            android:id="@+id/tvBloodGroup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:text="A-" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_rounded_gray">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratRegular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            android:text="@string/area" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratSemiBold"
            android:id="@+id/tvCity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            tools:text="FDA city, Faislabad" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/FontMontserratRegular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"
            android:text="@string/mobile_number" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontMontserratSemiBold"
                android:id="@+id/tvPhone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:text="8344803984" />


    </LinearLayout>

</LinearLayout>